# applications/app-service/src/main/resources/swagger.yaml
@@ -6,6 +6,8 @@ info:
 tags:
   - name: Franchises
     description: Operations related to franchise management
+  - name: Branches
+    description: Operations for managing products within a branch
 
 paths:
   /franchises:
@@ -54,8 +56,86 @@ paths:
             schema:
               $ref: '#/components/schemas/FranchiseRequest'
       responses:
-        '204':
+        '200':
           description: Franchise updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FranchiseResponse'
+        '400':
+          description: If the request data structure is invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+
+  /franchises/{franchiseId}/branches:
+    post:
+      tags:
+        - Branches
+      summary: Add a new branch to a franchise
+      operationId: createBranch
+      parameters:
+        - name: franchiseId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 123
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BranchRequest'
+      responses:
+        '201':
+          description: The branch has been successfully created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BranchResponse'
+        '400':
+          description: If the request data structure is invalid.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDto'
+  /franchises/{franchiseId}/branches/{branchId}:
+    patch:
+      tags:
+        - Branches
+      summary: Partial update of a branch
+      operationId: partialUpdateBranch
+      parameters:
+        - name: franchiseId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 123
+        - name: branchId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 123
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BranchRequest'
+      responses:
+        '200':
+          description: Branch successfully updated.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BranchResponse'
         '400':
           description: If the request data structure is invalid.
           content:
@@ -85,6 +165,24 @@ components:
         name:
           type: string
           description: Name of the franchise
+
+    BranchRequest:
+      type: object
+      properties:
+        name:
+          type: string
+      required:
+        - name
+
+    BranchResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 123
+        name:
+          type: string
 
     ErrorDto:
       type: object
