# domain/usecase/src/main/java/co/com/nequi/usecase/franchise/validator/FranchiseValidator.java
@@ -2,6 +2,7 @@ package co.com.nequi.usecase.franchise.validator;
 
 import co.com.nequi.model.exception.ErrorCode;
 import co.com.nequi.model.exception.FranchiseException;
+import co.com.nequi.model.franchise.Franchise;
 import co.com.nequi.model.franchise.gateways.FranchiseRepository;
 import lombok.RequiredArgsConstructor;
 import reactor.core.publisher.Mono;
@@ -19,6 +20,13 @@ public class FranchiseValidator {
                 .flatMap(exists -> Boolean.TRUE.equals(exists)
                         ? Mono.error(new FranchiseException(ErrorCode.F409000))
                         : Mono.empty());
+    }
+
+    public Mono<Void> validateFranchiseExists(Long franchiseId) {
+        return franchiseRepository.existsFranchiseById(franchiseId)
+                .flatMap(exists -> Boolean.TRUE.equals(exists)
+                        ? Mono.empty()
+                        : Mono.error(new FranchiseException(ErrorCode.F404000)));
     }
 
 }
