# infrastructure/entry-points/reactive-web/src/main/java/co/com/nequi/api/dto/ErrorDto.java
@@ -1,4 +1,0 @@
-package co.com.nequi.api.dto;
-
-public record ErrorDto(String code, String message) {
-}
