# infrastructure/entry-points/reactive-web/src/main/java/co/com/nequi/api/dto/response/BranchResponse.java
@@ -1,0 +1,4 @@
+package co.com.nequi.api.dto.response;
+
+public record BranchResponse(Long id, String name) {
+}
