# infrastructure/entry-points/reactive-web/src/main/java/co/com/nequi/api/dto/response/FranchiseResponse.java
@@ -1,0 +1,5 @@
+package co.com.nequi.api.dto.response;
+
+public record FranchiseResponse(Long id, String name) {
+}
+
